Fix bottom styling on product details page (should be no white background behind button anymore)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -162,6 +162,9 @@
 
 
 /* PRODUCT DEATILS */
+.instagram-list .instagram-container:last-child {
+    margin-bottom: 80px;
+}
 .image-container {
     position: relative;
     width: 100%;
